# soccer-editor

./: .gitignore  README.md  config.amateur.yaml  config.soccer.yaml  config.yaml  pyproject.toml  requirements.txt
scripts/: get_models.py  make_test_clip.py
src/soccer_editor/: __init__.py  __main__.py  detect_track.py  geometry.py  highlight.py  pipeline.py  reid.py  select.py  teams.py  util.py
trackers/: botsort_reid.yaml
